# bwfilters

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml
bwfilters/: __init__.py
docs/: conf.py  requirements.txt
docs/pages/: blackboard.rst
tests/: test_content_filters.py
